Keep PVCs on uninstall

--- a/foundryvtt-containerized/templates/persistentvolumeclaim.yaml
+++ b/foundryvtt-containerized/templates/persistentvolumeclaim.yaml
@@ -4,6 +4,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: foundryvtt-data
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   accessModes:
     - ReadWriteOnce
@@ -15,6 +17,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: foundryvtt-install
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   accessModes:
     - ReadWriteOnce
